# ManaOS

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.ja.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.ja.md  README.md  SECURITY.ja.md  SECURITY.md  THIRD_PARTY_LICENSES.ja.md  THIRD_PARTY_LICENSES.md  TODO.ja.md  TODO.md  TODO_COMPLETED.ja.md  TODO_COMPLETED.md  build.rs  deny.toml  justfile  run.bat  run.sh  rust-toolchain.toml  typos.toml
.agents/skills/boot-qemu-debug-loop/: SKILL.md
.agents/skills/kernel-api-contract/: SKILL.md
.agents/skills/minimal-patch-mode/: SKILL.md
.agents/skills/no-std-rust-check/: SKILL.md
.agents/skills/rust-os-safety-review/: SKILL.md
.agents/skills/target-arch-review/: SKILL.md
.github/workflows/: ci.yml
docs/: ACPI.md  ADDRESS_BOUNDARIES.md  ARCHITECTURE.md  FILESYSTEM.md  KERNEL_STACKS.md  MAINTAINER_WORKFLOW.md  MANUAL_QEMU_VALIDATION.md  MEMORY_MANAGEMENT.md  PROCESS_LIFECYCLE.md  TASK_PRIORITY.md  USER_POINTER_VALIDATION.md  USER_TRAP_FRAME.md
docs/ja/: ACPI.ja.md  ADDRESS_BOUNDARIES.ja.md  ARCHITECTURE.ja.md  CONTRIBUTING.ja.md  FILESYSTEM.ja.md  KERNEL_STACKS.ja.md  MAINTAINER_WORKFLOW.ja.md  MANUAL_QEMU_VALIDATION.ja.md  MEMORY_MANAGEMENT.ja.md  PROCESS_LIFECYCLE.ja.md  README.ja.md  TASK_PRIORITY.ja.md  TEMPLATES.ja.md  THIRD_PARTY_LICENSES.ja.md  TODO.ja.md  TODO_COMPLETED.ja.md  USER_POINTER_VALIDATION.ja.md  USER_TRAP_FRAME.ja.md
scripts/: check_architecture_boundaries.ps1  create_gpt_disk_image.ps1  generate_third_party_licenses.ps1  run_storage_smoke.ps1
src/: boot_interrupts.rs  boot_services.rs  main.rs
src/arch/: mod.rs
src/arch/x86_64/: context.rs  context_switch.s  cpu.rs  global_descriptor_table.rs  interrupt_controller.rs  interrupt_descriptor_table.rs  interrupt_entry.s  interval_timer.rs  mod.rs  pci_configuration.rs
src/boot_interrupts/: timer.rs
src/kernel/: interrupt.rs  logger.rs  mod.rs  process.rs  profiler.rs  serial.rs  syscall.rs  time.rs
src/kernel/acpi/: mod.rs  parser.rs
src/kernel/boot/: mod.rs
src/kernel/console/: command.rs  mod.rs  render.rs  service.rs  state.rs
src/kernel/diagnostic/: acpi.rs  boot_smoke.rs  log.rs  mod.rs  smoke.rs  summary.rs
src/kernel/driver/: mod.rs
src/kernel/elf/: loader.rs  mod.rs  parser.rs
src/kernel/filesystem/: backend.rs  descriptor.rs  device.rs  directory.rs  mod.rs  mount.rs  namespace.rs  node.rs  ramfs.rs  read_only.rs  service.rs
src/kernel/memory/: address.rs  address_space.rs  diagnostics.rs  frame_allocator.rs  heap.rs  mod.rs  paging.rs  runtime_allocator.rs  user_heap.rs  user_layout.rs  user_mapping.rs  user_pointer.rs  user_stack.rs  virtual_allocator.rs
src/kernel/runtime/: mod.rs  service.rs
src/kernel/sync/: mod.rs  ring_buffer.rs
src/kernel/syscall/: memory.rs
src/kernel/task/: architecture.rs  context.rs  diagnostics.rs  metadata.rs  mod.rs  process_lifecycle.rs  (+5 more)
src/shared/: mod.rs  page_fault_report.rs  syscall_contract.rs  timer_interrupt_frame.rs
templates/: README.ja.md  README.md  commit-message.template  documentation.ja.md.template  documentation.md.template  driver.rs.template  module_mod.rs.template
userland/: Cargo.toml  build.rs  linker.ld
userland/.cargo/: config.toml
userland/src/: io.rs  lib.rs  panic.rs  syscall.rs
userland/src/command/: cat.rs  clear.rs  dispatch.rs  echo.rs  grep.rs  mod.rs  output.rs  pipeline.rs
userland/src/syscall/: api.rs  mod.rs  raw.rs
(+84 files in other folders)
