[package]
name = "mana_os"
version = "0.1.0"
edition = "2021"
authors = ["ManaOS Contributors"]
description = "A monolithic x86_64 UEFI kernel written in Rust."
license-file = "LICENSE"
readme = "README.md"

[[bin]]
name = "mana_os"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# UEFI（アロケータ・ロガーは自前で用意するため default-features = false）
uefi = { version = "0.37", default-features = false, features = ["alloc"] }
# ログインターフェース
log = "0.4"
# スピンロック（no_std用Mutex）
spin = "0.12"
# COM1シリアルポート
uart_16550 = "0.6"
# ヒープアロケータ
linked_list_allocator = "0.10"
# ページテーブル・アドレス型など
x86_64 = "0.15"
# フォントラスタライザ
ab_glyph = { version = "0.2", default-features = false, features = ["libm"] }
# 割り込みコントローラ
pic8259 = "0.11"
# キーボードデコーダ
pc-keyboard = "0.9"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "s"
panic = "abort"
