[package]
name = "mana_os"
version = "0.1.0"
edition = "2021"
authors = ["ManaOS Contributors"]
description = "A monolithic x86_64 UEFI kernel written in Rust."
license = "GPL-3.0-or-later"
readme = "README.md"

[[bin]]
name = "mana_os"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# UEFI support; allocator and logger are provided by ManaOS.
uefi = { version = "0.37", default-features = false, features = ["alloc"] }
# Logging interface.
log = "0.4"
# Spin-based mutex for no_std code.
spin = "0.12"
# COM1 serial port driver.
uart_16550 = "0.6"
# Heap allocator.
linked_list_allocator = "0.10"
# Page table and address types.
x86_64 = "0.15"
# Font rasterizer.
ab_glyph = { version = "0.2", default-features = false, features = ["libm"] }
# Interrupt controller.
pic8259 = "0.11"
# Keyboard decoder.
pc-keyboard = "0.9"

[features]
default = []
log-debug = []
log-trace = ["log-debug"]

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "s"
panic = "abort"
